tests/fail/expr/match.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/match.rs:4:14
  |
4 |         x => x + 1,
  |              ^^^^^ expected `bool`, found integer
